gather three dataset completed

--- a/WeRateDogs_Data_Wrangling_Project.ipynb
+++ b/WeRateDogs_Data_Wrangling_Project.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Wrangling Project"
+    "## Data Wrangling Project\n",
+    "- Wrangle WeRateDogs Twitter data to create interesting and trustworthy analyses and visualizations. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +19,7 @@
     "import requests\n",
     "import tweepy\n",
     "import json\n",
+    "import timeit\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -25,12 +27,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Gather Data"
+    "## 1. Gather Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +50,7 @@
     "\n",
     "response = requests.get('https://d17h27t6h515a5.cloudfront.net/topher/2017/August/599fd2ad_image-predictions/image-predictions.tsv')\n",
     "with open('image_predictions.tsv', mode = 'wb') as file:\n",
-    "    file.write(response.content)\n",
-    "\n",
-    "image_predictions = pd.read_csv('image_prediction.tsv', delimiter = '\\t')\n"
+    "    file.write(response.content)"
    ]
   },
   {
@@ -58,20 +58,239 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Read in 1st dataset \n",
+    "image_predictions = pd.read_csv('image_predictions.tsv', delimiter = '\\t')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Assess Data"
+    "Each tweet's retweet count and favorite (\"like\") count at minimum, and any additional data you find interesting. Using the tweet IDs in the WeRateDogs Twitter archive, query the Twitter API for each tweet's JSON data using Python's Tweepy library and store each tweet's entire set of JSON data in a file called tweet_json.txt file. Each tweet's JSON data should be written to its own line. Then read this .txt file line by line into a pandas DataFrame with (at minimum) tweet ID, retweet count, and favorite count. Note: do not include your Twitter API keys, secrets, and tokens in your project submission."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "consumer_key = 'YOUR CONSUMER KEY'\n",
+    "consumer_secret = 'YOUR CONSUMER SECRET'\n",
+    "access_token = 'YOUR ACCESS TOKEN'\n",
+    "access_secret = 'YOUR ACCESS SECRET'\n",
+    "\n",
+    "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
+    "auth.set_access_token(access_token, access_secret)\n",
+    "\n",
+    "# set Twitter's rate limit\n",
+    "api = tweepy.API(auth, wait_on_rate_limit = True, wait_on_rate_limit_notify = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n",
+      "error\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit reached. Sleeping for: 460\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error\n",
+      "error\n",
+      "error\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit reached. Sleeping for: 788\n",
+      "Rate limit reached. Sleeping for: 792\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00041912999586202204\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = timeit.timeit()\n",
+    "\n",
+    "with open('tweet_json.txt','a',encoding = 'utf8') as f:\n",
+    "    for tweet_id in twitter_archive['tweet_id']:\n",
+    "        try:\n",
+    "            tweet = api.get_status(tweet_id, tweet_mode = 'extended')\n",
+    "            json.dump(tweet._json, f)\n",
+    "            f.write('\\n')\n",
+    "        except:\n",
+    "            print('error')\n",
+    "            \n",
+    "end = timeit.timeit()\n",
+    "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_data = []\n",
+    "\n",
+    "tweet_file = open('tweet_json.txt', 'r')\n",
+    "\n",
+    "for line in tweet_file:\n",
+    "    tweet = json.loads(line)\n",
+    "    tweets_data.append(tweet)\n",
+    "    \n",
+    "tweet_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweet_info = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweet_info['id'] = list(map(lambda tweet: tweet['id'], tweets_data))\n",
+    "\n",
+    "tweet_info['retweet_count'] = list(map(lambda tweet: tweet['retweet_count'], tweets_data))\n",
+    "\n",
+    "tweet_info['favorite_count'] = list(map(lambda tweet: tweet['favorite_count'], tweets_data))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>retweet_count</th>\n",
+       "      <th>favorite_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892420643555336193</td>\n",
+       "      <td>8592</td>\n",
+       "      <td>38824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>892177421306343426</td>\n",
+       "      <td>6312</td>\n",
+       "      <td>33253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>891815181378084864</td>\n",
+       "      <td>4189</td>\n",
+       "      <td>25044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>891689557279858688</td>\n",
+       "      <td>8706</td>\n",
+       "      <td>42189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>891327558926688256</td>\n",
+       "      <td>9476</td>\n",
+       "      <td>40349</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   id  retweet_count  favorite_count\n",
+       "0  892420643555336193           8592           38824\n",
+       "1  892177421306343426           6312           33253\n",
+       "2  891815181378084864           4189           25044\n",
+       "3  891689557279858688           8706           42189\n",
+       "4  891327558926688256           9476           40349"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_info .head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After querying each tweet ID, you will write its JSON data to the required tweet_json.txt file with each tweet's JSON data on its own line. You will then read this file, line by line, to create a pandas DataFrame that you will soon assess and clean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Assess Data"
    ]
   },
   {
@@ -83,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +501,7 @@
        "4                  10  Franklin  None    None   None  None  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -888,13 +1107,33 @@
        "4  0.243682    True             Doberman  0.154629    True  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "image_predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2075, 12)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_predictions.shape"
    ]
   },
   {
@@ -1203,6 +1442,26 @@
    ],
    "source": [
     "image_predictions.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Clean Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reference\n",
+    "\n",
+    "Twitter API Guide:\n",
+    "https://www.slickremix.com/docs/how-to-get-api-keys-and-tokens-for-twitter/\n",
+    "\n",
+    "Tweepy documentation:\n",
+    "https://media.readthedocs.org/pdf/tweepy/latest/tweepy.pdf"
    ]
   },
   {
