complete data gathering part

--- a/WeRateDogs_Data_Wrangling_Project.ipynb
+++ b/WeRateDogs_Data_Wrangling_Project.ipynb
@@ -4,13 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Wrangling Project\n",
-    "- Wrangle WeRateDogs Twitter data to create interesting and trustworthy analyses and visualizations. "
+    "## WeRateDogs Data Wrangling Project\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Key Points for this project:\n",
+    "\n",
+    "- You only want original ratings (no retweets) that have images. Though there are 5000+ tweets in the dataset, not all are dog ratings and some are retweets.\n",
+    "- Assessing and cleaning the entire dataset completely would require a lot of time, and is not necessary to practice and demonstrate your skills in data wrangling. Therefore, the requirements of this project are only to assess and clean at least 8 quality issues and at least 2 quality issues in this dataset.\n",
+    "- Cleaning includes merging individual pieces of data according to the rules of tidy data.\n",
+    "- The fact that the rating numerators are greater than the denominators does not need to be cleaned. This unique rating system is a big part of the popularity of WeRateDogs.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +30,6 @@
     "import requests\n",
     "import tweepy\n",
     "import json\n",
-    "import timeit\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -27,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Gather Data"
+    "## Part I. Gather Data"
    ]
   },
   {
@@ -47,7 +57,6 @@
    "outputs": [],
    "source": [
     "# Use requests library to programmatically download the tsv file\n",
-    "\n",
     "response = requests.get('https://d17h27t6h515a5.cloudfront.net/topher/2017/August/599fd2ad_image-predictions/image-predictions.tsv')\n",
     "with open('image_predictions.tsv', mode = 'wb') as file:\n",
     "    file.write(response.content)"
@@ -55,32 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in 1st dataset \n",
+    "# Read in 2nd dataset \n",
     "image_predictions = pd.read_csv('image_predictions.tsv', delimiter = '\\t')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Each tweet's retweet count and favorite (\"like\") count at minimum, and any additional data you find interesting. Using the tweet IDs in the WeRateDogs Twitter archive, query the Twitter API for each tweet's JSON data using Python's Tweepy library and store each tweet's entire set of JSON data in a file called tweet_json.txt file. Each tweet's JSON data should be written to its own line. Then read this .txt file line by line into a pandas DataFrame with (at minimum) tweet ID, retweet count, and favorite count. Note: do not include your Twitter API keys, secrets, and tokens in your project submission."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use tweepy to query Twitter's API and hide the API info here\n",
     "\n",
-    "consumer_key = 'YOUR CONSUMER KEY'\n",
-    "consumer_secret = 'YOUR CONSUMER SECRET'\n",
-    "access_token = 'YOUR ACCESS TOKEN'\n",
-    "access_secret = 'YOUR ACCESS SECRET'\n",
+    "consumer_key = ''\n",
+    "consumer_secret = ''\n",
+    "access_token = ''\n",
+    "access_secret = ''\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_secret)\n",
@@ -91,113 +94,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write the querying JSON data into tweet_json.txt\n",
+    "with open('tweet_json.txt','a',encoding = 'utf8') as f:\n",
+    "    for tweet_id in twitter_archive['tweet_id']:\n",
+    "        try:\n",
+    "            tweet = api.get_status(tweet_id, tweet_mode = 'extended') # set mode to extended\n",
+    "            json.dump(tweet._json, f)\n",
+    "            f.write('\\n')\n",
+    "        except: \n",
+    "            print('error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a empty list for insert each tweet info into it\n",
+    "tweets = []\n",
+    "\n",
+    "tweet_json = open('tweet_json.txt', 'r')\n",
+    "\n",
+    "for line in tweet_json:\n",
+    "    tweet = json.loads(line)\n",
+    "    tweets.append(tweet)\n",
+    "    \n",
+    "tweet_json.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error\n",
-      "error\n",
-      "error\n",
-      "error\n",
-      "error\n",
-      "error\n",
-      "error\n",
-      "error\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rate limit reached. Sleeping for: 460\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "error\n",
-      "error\n",
-      "error\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rate limit reached. Sleeping for: 788\n",
-      "Rate limit reached. Sleeping for: 792\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.00041912999586202204\n"
+      "{'created_at': 'Tue Aug 01 16:23:56 +0000 2017', 'id': 892420643555336193, 'id_str': '892420643555336193', 'full_text': \"This is Phineas. He's a mystical boy. Only ever appears in the hole of a donut. 13/10 https://t.co/MgUWQ76dJU\", 'truncated': False, 'display_text_range': [0, 85], 'entities': {'hashtags': [], 'symbols': [], 'user_mentions': [], 'urls': [], 'media': [{'id': 892420639486877696, 'id_str': '892420639486877696', 'indices': [86, 109], 'media_url': 'http://pbs.twimg.com/media/DGKD1-bXoAAIAUK.jpg', 'media_url_https': 'https://pbs.twimg.com/media/DGKD1-bXoAAIAUK.jpg', 'url': 'https://t.co/MgUWQ76dJU', 'display_url': 'pic.twitter.com/MgUWQ76dJU', 'expanded_url': 'https://twitter.com/dog_rates/status/892420643555336193/photo/1', 'type': 'photo', 'sizes': {'thumb': {'w': 150, 'h': 150, 'resize': 'crop'}, 'medium': {'w': 540, 'h': 528, 'resize': 'fit'}, 'small': {'w': 540, 'h': 528, 'resize': 'fit'}, 'large': {'w': 540, 'h': 528, 'resize': 'fit'}}}]}, 'extended_entities': {'media': [{'id': 892420639486877696, 'id_str': '892420639486877696', 'indices': [86, 109], 'media_url': 'http://pbs.twimg.com/media/DGKD1-bXoAAIAUK.jpg', 'media_url_https': 'https://pbs.twimg.com/media/DGKD1-bXoAAIAUK.jpg', 'url': 'https://t.co/MgUWQ76dJU', 'display_url': 'pic.twitter.com/MgUWQ76dJU', 'expanded_url': 'https://twitter.com/dog_rates/status/892420643555336193/photo/1', 'type': 'photo', 'sizes': {'thumb': {'w': 150, 'h': 150, 'resize': 'crop'}, 'medium': {'w': 540, 'h': 528, 'resize': 'fit'}, 'small': {'w': 540, 'h': 528, 'resize': 'fit'}, 'large': {'w': 540, 'h': 528, 'resize': 'fit'}}}]}, 'source': '<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>', 'in_reply_to_status_id': None, 'in_reply_to_status_id_str': None, 'in_reply_to_user_id': None, 'in_reply_to_user_id_str': None, 'in_reply_to_screen_name': None, 'user': {'id': 4196983835, 'id_str': '4196983835', 'name': 'WeRateDogs™', 'screen_name': 'dog_rates', 'location': '𝓶𝓮𝓻𝓬𝓱 ↴      DM YOUR DOGS', 'description': 'Your Only Source for Professional Dog Ratings STORE: @ShopWeRateDogs | IG, FB & SC: WeRateDogs | MOBILE APP: @GoodDogsGame Business: dogratingtwitter@gmail.com', 'url': 'https://t.co/N7sNNHAEXS', 'entities': {'url': {'urls': [{'url': 'https://t.co/N7sNNHAEXS', 'expanded_url': 'http://weratedogs.com', 'display_url': 'weratedogs.com', 'indices': [0, 23]}]}, 'description': {'urls': []}}, 'protected': False, 'followers_count': 6860907, 'friends_count': 103, 'listed_count': 4337, 'created_at': 'Sun Nov 15 21:41:29 +0000 2015', 'favourites_count': 133689, 'utc_offset': None, 'time_zone': None, 'geo_enabled': True, 'verified': True, 'statuses_count': 7030, 'lang': 'en', 'contributors_enabled': False, 'is_translator': False, 'is_translation_enabled': False, 'profile_background_color': '000000', 'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme1/bg.png', 'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme1/bg.png', 'profile_background_tile': False, 'profile_image_url': 'http://pbs.twimg.com/profile_images/948761950363664385/Fpr2Oz35_normal.jpg', 'profile_image_url_https': 'https://pbs.twimg.com/profile_images/948761950363664385/Fpr2Oz35_normal.jpg', 'profile_banner_url': 'https://pbs.twimg.com/profile_banners/4196983835/1525830435', 'profile_link_color': 'F5ABB5', 'profile_sidebar_border_color': '000000', 'profile_sidebar_fill_color': '000000', 'profile_text_color': '000000', 'profile_use_background_image': False, 'has_extended_profile': True, 'default_profile': False, 'default_profile_image': False, 'following': True, 'follow_request_sent': False, 'notifications': False, 'translator_type': 'none'}, 'geo': None, 'coordinates': None, 'place': None, 'contributors': None, 'is_quote_status': False, 'retweet_count': 8592, 'favorite_count': 38824, 'favorited': False, 'retweeted': False, 'possibly_sensitive': False, 'possibly_sensitive_appealable': False, 'lang': 'en'}\n"
      ]
     }
    ],
    "source": [
-    "start = timeit.timeit()\n",
-    "\n",
-    "with open('tweet_json.txt','a',encoding = 'utf8') as f:\n",
-    "    for tweet_id in twitter_archive['tweet_id']:\n",
-    "        try:\n",
-    "            tweet = api.get_status(tweet_id, tweet_mode = 'extended')\n",
-    "            json.dump(tweet._json, f)\n",
-    "            f.write('\\n')\n",
-    "        except:\n",
-    "            print('error')\n",
-    "            \n",
-    "end = timeit.timeit()\n",
-    "print(end - start)"
+    "print(tweets[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets_data = []\n",
+    "\"\"\"\n",
+    "We can see lots of information from 'tweet_json' above, but here I'm only focus on certain features, \n",
+    "such as 'retweet_count', 'favorite_count', and of course 'id' for table merge. \n",
+    "\"\"\"\n",
     "\n",
-    "tweet_file = open('tweet_json.txt', 'r')\n",
+    "tweet_data = pd.DataFrame()  # create a empty dataframe for map the tweet_data info \n",
     "\n",
-    "for line in tweet_file:\n",
-    "    tweet = json.loads(line)\n",
-    "    tweets_data.append(tweet)\n",
-    "    \n",
-    "tweet_file.close()"
+    "tweet_data['id'] = list(map(lambda tweet: tweet['id'], tweets))\n",
+    "\n",
+    "tweet_data['retweet_count'] = list(map(lambda tweet: tweet['retweet_count'], tweets))\n",
+    "\n",
+    "tweet_data['favorite_count'] = list(map(lambda tweet: tweet['favorite_count'], tweets))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tweet_info = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tweet_info['id'] = list(map(lambda tweet: tweet['id'], tweets_data))\n",
-    "\n",
-    "tweet_info['retweet_count'] = list(map(lambda tweet: tweet['retweet_count'], tweets_data))\n",
-    "\n",
-    "tweet_info['favorite_count'] = list(map(lambda tweet: tweet['favorite_count'], tweets_data))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -270,34 +239,27 @@
        "4  891327558926688256           9476           40349"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tweet_info .head()"
+    "tweet_data.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After querying each tweet ID, you will write its JSON data to the required tweet_json.txt file with each tweet's JSON data on its own line. You will then read this file, line by line, to create a pandas DataFrame that you will soon assess and clean."
+    "## Part 2. Assess Data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Assess Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### twitter_aechive table "
+    "#### Table 1: twitter_archive table "
    ]
   },
   {
@@ -958,6 +920,90 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12      558\n",
+       "11      464\n",
+       "10      461\n",
+       "13      351\n",
+       "9       158\n",
+       "8       102\n",
+       "7        55\n",
+       "14       54\n",
+       "5        37\n",
+       "6        32\n",
+       "3        19\n",
+       "4        17\n",
+       "1         9\n",
+       "2         9\n",
+       "420       2\n",
+       "0         2\n",
+       "15        2\n",
+       "75        2\n",
+       "80        1\n",
+       "20        1\n",
+       "24        1\n",
+       "26        1\n",
+       "44        1\n",
+       "50        1\n",
+       "60        1\n",
+       "165       1\n",
+       "84        1\n",
+       "88        1\n",
+       "144       1\n",
+       "182       1\n",
+       "143       1\n",
+       "666       1\n",
+       "960       1\n",
+       "1776      1\n",
+       "17        1\n",
+       "27        1\n",
+       "45        1\n",
+       "99        1\n",
+       "121       1\n",
+       "204       1\n",
+       "Name: rating_numerator, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive.rating_numerator.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>     2221\n",
+       "<a href=\"http://vine.co\" rel=\"nofollow\">Vine - Make a Scene</a>                          91\n",
+       "<a href=\"http://twitter.com\" rel=\"nofollow\">Twitter Web Client</a>                       33\n",
+       "<a href=\"https://about.twitter.com/products/tweetdeck\" rel=\"nofollow\">TweetDeck</a>      11\n",
+       "Name: source, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive.source.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1114,6 +1160,99 @@
    ],
    "source": [
     "image_predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make copies for cleaning\n",
+    "twitter_archive_clean = twitter_archive.copy()\n",
+    "image_predictions_clean = image_predictions.copy()\n",
+    "tweet_info_clean = tweet_info.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quality Issues\n",
+    "\n",
+    "##### `twitter_archive` table\n",
+    "- Zip code is a float not a string\n",
+    "- Zip code has four digits sometimes\n",
+    "- Tim Neudorf height is 27 in instead of 72 in\n",
+    "- Full state names sometimes, abbreviations other times\n",
+    "- Dsvid Gustafsson\n",
+    "- Missing demographic information (address - contact columns) ***(can't clean yet)***\n",
+    "- Erroneous datatypes (assigned sex, state, zip_code, and birthdate columns)\n",
+    "- Multiple phone number formats\n",
+    "- Default John Doe data\n",
+    "- Multiple records for Jakobsen, Gersten, Taylor\n",
+    "- kgs instead of lbs for Zaitseva weight\n",
+    "\n",
+    "##### `tweet_info` table\n",
+    "- Missing HbA1c changes\n",
+    "- The letter 'u' in starting and ending doses for Auralin and Novodra\n",
+    "- Lowercase given names and surnames\n",
+    "- Missing records (280 instead of 350)\n",
+    "- Erroneous datatypes (auralin and novodra columns)\n",
+    "- Inaccurate HbA1c changes (leading 4s mistaken as 9s)\n",
+    "- Nulls represented as dashes (-) in auralin and novodra columns\n",
+    "\n",
+    "##### `adverse_reactions` table\n",
+    "- Lowercase given names and surnames"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tidiness Issues\n",
+    "- Columns 'doggo', 'floofer', 'pupper', 'puppo' in `twitter_archive` should belong to one varaible -- stage\n",
+    "\n",
+    "\n",
+    "- Contact column in `patients` table should be split into phone number and email\n",
+    "- Three variables in two columns in `treatments` table (treatment, start dose and end dose)\n",
+    "- Adverse reaction should be part of the `treatments` table\n",
+    "- Given name and surname columns in `patients` table duplicated in `treatments` and `adverse_reactions` tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_archive_clean['stage'] = twitter_archive_clean\n",
+    "\n",
+    "\n",
+    "# axis=1 denotes that we are referring to a column\n",
+    "twitter_archive_clean = twitter_archive_clean.drop(['doggo','floofer','pupper', 'puppo'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patients_clean['phone_number'] = patients_clean.contact.str.extract('((?:\\+\\d{1,2}\\s)?\\(?\\d{3}\\)?[\\s.-]?\\d{3}[\\s.-]?\\d{4})', expand=True)\n",
+    "\n",
+    "# [a-zA-Z] to signify emails in this dataset all start and end with letters\n",
+    "patients_clean['email'] = patients_clean.contact.str.extract('([a-zA-Z][a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+[a-zA-Z])', expand=True)\n",
+    "\n",
+    "# Note: axis=1 denotes that we are referring to a column, not a row\n",
+    "patients_clean = patients_clean.drop('contact', axis=1)"
    ]
   },
   {
