fix 3 quality issues

--- a/WeRateDogs_Data_Wrangling_Project.ipynb
+++ b/WeRateDogs_Data_Wrangling_Project.ipynb
@@ -750,13 +750,13 @@
     "for i in twitter_archive['text']:\n",
     "    print(i)\n",
     "    count += 1\n",
-    "    if count >10:\n",
+    "    if count > 10:\n",
     "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1937,23 +1937,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quality Issues\n",
+    "## Cleaning Plan Summary\n",
+    "- Inspecting data set for two things: data quality issues and lack of tidiness\n",
+    "- Quality Isssues means content issues like missing, duplicate, or incorrect data\n",
+    "- Untidy Data has specific structural issues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part I -- Quality Issues\n",
     "\n",
     "##### `twitter_archive` table\n",
     "\n",
-    "- Some columns have huge amount of missing values, for example, \"in_reply_to_status_id\", \"in_reply_to_user_id\", \"retweeted_status_id\", \"in_reply_to_user_id\", \"retweeted_status_id\", \"retweeted_status_user_id\", \"retweeted_status_timestamp\". Since I don't need in_reply and retweet data in this project, I perfer to delete those columns directly. \n",
+    "1. Some columns have huge amount of missing values, for example, \"in_reply_to_status_id\", \"in_reply_to_user_id\", \"retweeted_status_id\", \"in_reply_to_user_id\", \"retweeted_status_id\", \"retweeted_status_user_id\", \"retweeted_status_timestamp\". Since I don't need in_reply and retweet data in this project, I perfer to delete those columns directly. \n",
     "\n",
-    "- The varaible \"expanded_urls\" also has few missing values. \n",
+    "2. The varaible \"expanded_urls\" also has few missing values, which means some records had no images.\n",
     "\n",
-    "- The datatype of \"timestamp\" is not a timestamp.\n",
+    "3. The datatype of \"timestamp\" is not correct.\n",
     "\n",
-    "- Any ratings without images should not be taking into account. \n",
+    "4. Any ratings without images should not be taking into account. \n",
     "\n",
-    "- \"rating_numerator\" has some extreme values, such as 420 and 1776. \n",
+    "5. \"rating_numerator\" has some extreme values, such as 420 and 1776. \n",
     "\n",
-    "- The standard for \"rating_denominator\" is 10, but it includes some other abnormal numbers (90, 110, etc.), which could be errors.\n",
+    "6. The standard for \"rating_denominator\" is 10, but it includes some other abnormal numbers (90, 110, etc.), which could be errors.\n",
     "\n",
-    "- Some \"name\" are missing in but show in the 'text'. I could extract them from text to deal with the missing names.\n",
+    "7. Some \"name\" are missing in but show in the 'text'. I could extract them from text to deal with the missing names.\n",
     "\n",
     "\n",
     "##### `image_predictions` table\n",
@@ -1968,7 +1978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tidiness Issues\n",
+    "### Part II -- Tidiness Issues\n",
     "- Columns 'doggo', 'floofer', 'pupper', 'puppo' in `twitter_archive` should belong to one varaible -- stage\n",
     "- The`tweet_data` table need to merge into the `twitter_archive` table.\n"
    ]
@@ -1982,21 +1992,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make copies for cleaning\n",
     "twitter_archive_clean = twitter_archive.copy()\n",
     "image_predictions_clean = image_predictions.copy()\n",
-    "tweet_info_clean = tweet_info.copy()"
+    "tweet_data_clean = tweet_data.copy()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Clean"
+    "### Quality 1 Define : Remove all the unnecessary columns directly in `twitter_archive_clean`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop the columns unnecessary and contain huge amount of missing data\n",
+    "columns_drop = ['retweeted_status_id', 'retweeted_status_user_id', 'retweeted_status_timestamp', 'in_reply_to_status_id',\n",
+    "               'in_reply_to_user_id', 'in_reply_to_user_id']\n",
+    "\n",
+    "twitter_archive_clean = twitter_archive_clean.drop(columns_drop, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2356 entries, 0 to 2355\n",
+      "Data columns (total 12 columns):\n",
+      "tweet_id              2356 non-null int64\n",
+      "timestamp             2356 non-null object\n",
+      "source                2356 non-null object\n",
+      "text                  2356 non-null object\n",
+      "expanded_urls         2297 non-null object\n",
+      "rating_numerator      2356 non-null int64\n",
+      "rating_denominator    2356 non-null int64\n",
+      "name                  2356 non-null object\n",
+      "doggo                 2356 non-null object\n",
+      "floofer               2356 non-null object\n",
+      "pupper                2356 non-null object\n",
+      "puppo                 2356 non-null object\n",
+      "dtypes: int64(3), object(9)\n",
+      "memory usage: 221.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "twitter_archive_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quality 2 Define : Remove the records with no images infomation in `twitter_archive_clean`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop the 59 records without images \n",
+    "twitter_archive_clean = twitter_archive_clean.dropna(subset = ['expanded_urls'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tweet_id              0\n",
+       "timestamp             0\n",
+       "source                0\n",
+       "text                  0\n",
+       "expanded_urls         0\n",
+       "rating_numerator      0\n",
+       "rating_denominator    0\n",
+       "name                  0\n",
+       "doggo                 0\n",
+       "floofer               0\n",
+       "pupper                0\n",
+       "puppo                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive_clean.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quality 3 Define : Change the datatype of 'timestamp' to datetime in `twitter_archive_clean`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_archive_clean['timestamp'] = pd.to_datetime(twitter_archive_clean['timestamp'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2017-08-01 16:23:56\n",
+       "1   2017-08-01 00:17:27\n",
+       "2   2017-07-31 00:18:03\n",
+       "Name: timestamp, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive_clean['timestamp'].head(3)"
    ]
   },
   {
@@ -2011,6 +2190,13 @@
     "# axis=1 denotes that we are referring to a column\n",
     "twitter_archive_clean = twitter_archive_clean.drop(['doggo','floofer','pupper', 'puppo'], axis=1, inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
