--- a/WeRateDogs_Data_Wrangling_Project.ipynb
+++ b/WeRateDogs_Data_Wrangling_Project.ipynb
@@ -1953,11 +1953,11 @@
     "\n",
     "1. Some columns have huge amount of missing values, for example, \"in_reply_to_status_id\", \"in_reply_to_user_id\", \"retweeted_status_id\", \"in_reply_to_user_id\", \"retweeted_status_id\", \"retweeted_status_user_id\", \"retweeted_status_timestamp\". Since I don't need in_reply and retweet data in this project, I perfer to delete those columns directly. \n",
     "\n",
-    "2. The varaible \"expanded_urls\" also has few missing values, which means some records had no images.\n",
+    "2. The varaible \"expanded_urls\" also has few missing values, which means some records had no images. Any ratings without images should not be taking into account.\n",
     "\n",
     "3. The datatype of \"timestamp\" is not correct.\n",
     "\n",
-    "4. Any ratings without images should not be taking into account. \n",
+    "4. Optimize the source contents for human reading habit; change the long url links to certain words.\n",
     "\n",
     "5. \"rating_numerator\" has some extreme values, such as 420 and 1776. \n",
     "\n",
@@ -1967,8 +1967,9 @@
     "\n",
     "\n",
     "##### `image_predictions` table\n",
-    "- Only 2075 records in here while 'twitter_archive' has 2356. \n",
-    "- The columns'names are not clear and straightforward such as p1,p2.\n",
+    "\n",
+    "8. Only 2075 records in here while 'twitter_archive' has 2356. \n",
+    "9. The columns'names are not clear and straightforward such as p1,p2.\n",
     "\n",
     "##### `tweet_data` table\n",
     "- "
@@ -2156,6 +2157,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
@@ -2180,6 +2188,475 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2297 entries, 0 to 2355\n",
+      "Data columns (total 12 columns):\n",
+      "tweet_id              2297 non-null int64\n",
+      "timestamp             2297 non-null datetime64[ns]\n",
+      "source                2297 non-null object\n",
+      "text                  2297 non-null object\n",
+      "expanded_urls         2297 non-null object\n",
+      "rating_numerator      2297 non-null int64\n",
+      "rating_denominator    2297 non-null int64\n",
+      "name                  2297 non-null object\n",
+      "doggo                 2297 non-null object\n",
+      "floofer               2297 non-null object\n",
+      "pupper                2297 non-null object\n",
+      "puppo                 2297 non-null object\n",
+      "dtypes: datetime64[ns](1), int64(3), object(8)\n",
+      "memory usage: 313.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "twitter_archive_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quality 3 Define : Optimizes the source contexts in `twitter_archive_clean` and  column names in `image_predictions`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>     2163\n",
+       "<a href=\"http://vine.co\" rel=\"nofollow\">Vine - Make a Scene</a>                          91\n",
+       "<a href=\"http://twitter.com\" rel=\"nofollow\">Twitter Web Client</a>                       32\n",
+       "<a href=\"https://about.twitter.com/products/tweetdeck\" rel=\"nofollow\">TweetDeck</a>      11\n",
+       "Name: source, dtype: int64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive_clean['source'].value_counts()\n",
+    "\n",
+    "# Four types of source: Twitter for iphone / Vine - Make a Scene / Twitter Web Client / TweetDeck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# simpfy the source contexts\n",
+    "       \n",
+    "twitter_archive_clean['source'] = twitter_archive_clean['source'].replace('<a href=\"http://twitter.com/download/iphone\" rel=\"nofollow\">Twitter for iPhone</a>',\n",
+    "                                                                          'Twitter for iphone')\n",
+    "twitter_archive_clean['source'] =  twitter_archive_clean['source'].replace('<a href=\"http://vine.co\" rel=\"nofollow\">Vine - Make a Scene</a>',\n",
+    "                                                                          'Vine - Make a Scene')\n",
+    "twitter_archive_clean['source'] =  twitter_archive_clean['source'].replace('<a href=\"http://twitter.com\" rel=\"nofollow\">Twitter Web Client</a>',\n",
+    "                                                                           'Twitter Web Client')\n",
+    "twitter_archive_clean['source'] =  twitter_archive_clean['source'].replace('<a href=\"https://about.twitter.com/products/tweetdeck\" rel=\"nofollow\">TweetDeck</a>',\n",
+    "                                                                           'TweetDeck')\n",
+    "\n",
+    "# change the type of source to category for preparing later visualization\n",
+    "#twitter_archive_clean['source'] = twitter_archive_clean['source'].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Twitter for iphone     2163\n",
+       "Vine - Make a Scene      91\n",
+       "Twitter Web Client       32\n",
+       "TweetDeck                11\n",
+       "Name: source, dtype: int64"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive_clean['source'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>jpg_url</th>\n",
+       "      <th>img_num</th>\n",
+       "      <th>p1</th>\n",
+       "      <th>p1_conf</th>\n",
+       "      <th>p1_dog</th>\n",
+       "      <th>p2</th>\n",
+       "      <th>p2_conf</th>\n",
+       "      <th>p2_dog</th>\n",
+       "      <th>p3</th>\n",
+       "      <th>p3_conf</th>\n",
+       "      <th>p3_dog</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>666020888022790149</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Welsh_springer_spaniel</td>\n",
+       "      <td>0.465074</td>\n",
+       "      <td>True</td>\n",
+       "      <td>collie</td>\n",
+       "      <td>0.156665</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Shetland_sheepdog</td>\n",
+       "      <td>0.061428</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>666029285002620928</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>redbone</td>\n",
+       "      <td>0.506826</td>\n",
+       "      <td>True</td>\n",
+       "      <td>miniature_pinscher</td>\n",
+       "      <td>0.074192</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Rhodesian_ridgeback</td>\n",
+       "      <td>0.072010</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>666033412701032449</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>German_shepherd</td>\n",
+       "      <td>0.596461</td>\n",
+       "      <td>True</td>\n",
+       "      <td>malinois</td>\n",
+       "      <td>0.138584</td>\n",
+       "      <td>True</td>\n",
+       "      <td>bloodhound</td>\n",
+       "      <td>0.116197</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>666044226329800704</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT5Dr8HUEAA-lEu.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Rhodesian_ridgeback</td>\n",
+       "      <td>0.408143</td>\n",
+       "      <td>True</td>\n",
+       "      <td>redbone</td>\n",
+       "      <td>0.360687</td>\n",
+       "      <td>True</td>\n",
+       "      <td>miniature_pinscher</td>\n",
+       "      <td>0.222752</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>666049248165822465</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT5IQmsXIAAKY4A.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>miniature_pinscher</td>\n",
+       "      <td>0.560311</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Rottweiler</td>\n",
+       "      <td>0.243682</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Doberman</td>\n",
+       "      <td>0.154629</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             tweet_id                                          jpg_url  \\\n",
+       "0  666020888022790149  https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg   \n",
+       "1  666029285002620928  https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg   \n",
+       "2  666033412701032449  https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg   \n",
+       "3  666044226329800704  https://pbs.twimg.com/media/CT5Dr8HUEAA-lEu.jpg   \n",
+       "4  666049248165822465  https://pbs.twimg.com/media/CT5IQmsXIAAKY4A.jpg   \n",
+       "\n",
+       "   img_num                      p1   p1_conf  p1_dog                  p2  \\\n",
+       "0        1  Welsh_springer_spaniel  0.465074    True              collie   \n",
+       "1        1                 redbone  0.506826    True  miniature_pinscher   \n",
+       "2        1         German_shepherd  0.596461    True            malinois   \n",
+       "3        1     Rhodesian_ridgeback  0.408143    True             redbone   \n",
+       "4        1      miniature_pinscher  0.560311    True          Rottweiler   \n",
+       "\n",
+       "    p2_conf  p2_dog                   p3   p3_conf  p3_dog  \n",
+       "0  0.156665    True    Shetland_sheepdog  0.061428    True  \n",
+       "1  0.074192    True  Rhodesian_ridgeback  0.072010    True  \n",
+       "2  0.138584    True           bloodhound  0.116197    True  \n",
+       "3  0.360687    True   miniature_pinscher  0.222752    True  \n",
+       "4  0.243682    True             Doberman  0.154629    True  "
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change the column names\n",
+    "image_predictions.rename(columns={'p1':'first_prediction', 'p1_conf': 'first_confidence', 'p1_dog': 'first_dog',\n",
+    "                                  'p2': 'second_prediction', 'p2_conf': 'second_confidence', 'p2_dog': 'second_dog',\n",
+    "                                  'p3': 'third_prediction', 'p3_conf': 'third_confidence', 'p3_dog': 'third_dog'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>jpg_url</th>\n",
+       "      <th>img_num</th>\n",
+       "      <th>first_prediction</th>\n",
+       "      <th>first_confidence</th>\n",
+       "      <th>first_dog</th>\n",
+       "      <th>second_prediction</th>\n",
+       "      <th>second_confidence</th>\n",
+       "      <th>second_dog</th>\n",
+       "      <th>third_prediction</th>\n",
+       "      <th>third_confidence</th>\n",
+       "      <th>third_dog</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>666020888022790149</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Welsh_springer_spaniel</td>\n",
+       "      <td>0.465074</td>\n",
+       "      <td>True</td>\n",
+       "      <td>collie</td>\n",
+       "      <td>0.156665</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Shetland_sheepdog</td>\n",
+       "      <td>0.061428</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>666029285002620928</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>redbone</td>\n",
+       "      <td>0.506826</td>\n",
+       "      <td>True</td>\n",
+       "      <td>miniature_pinscher</td>\n",
+       "      <td>0.074192</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Rhodesian_ridgeback</td>\n",
+       "      <td>0.072010</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>666033412701032449</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>German_shepherd</td>\n",
+       "      <td>0.596461</td>\n",
+       "      <td>True</td>\n",
+       "      <td>malinois</td>\n",
+       "      <td>0.138584</td>\n",
+       "      <td>True</td>\n",
+       "      <td>bloodhound</td>\n",
+       "      <td>0.116197</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>666044226329800704</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT5Dr8HUEAA-lEu.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Rhodesian_ridgeback</td>\n",
+       "      <td>0.408143</td>\n",
+       "      <td>True</td>\n",
+       "      <td>redbone</td>\n",
+       "      <td>0.360687</td>\n",
+       "      <td>True</td>\n",
+       "      <td>miniature_pinscher</td>\n",
+       "      <td>0.222752</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>666049248165822465</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT5IQmsXIAAKY4A.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>miniature_pinscher</td>\n",
+       "      <td>0.560311</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Rottweiler</td>\n",
+       "      <td>0.243682</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Doberman</td>\n",
+       "      <td>0.154629</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             tweet_id                                          jpg_url  \\\n",
+       "0  666020888022790149  https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg   \n",
+       "1  666029285002620928  https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg   \n",
+       "2  666033412701032449  https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg   \n",
+       "3  666044226329800704  https://pbs.twimg.com/media/CT5Dr8HUEAA-lEu.jpg   \n",
+       "4  666049248165822465  https://pbs.twimg.com/media/CT5IQmsXIAAKY4A.jpg   \n",
+       "\n",
+       "   img_num        first_prediction  first_confidence  first_dog  \\\n",
+       "0        1  Welsh_springer_spaniel          0.465074       True   \n",
+       "1        1                 redbone          0.506826       True   \n",
+       "2        1         German_shepherd          0.596461       True   \n",
+       "3        1     Rhodesian_ridgeback          0.408143       True   \n",
+       "4        1      miniature_pinscher          0.560311       True   \n",
+       "\n",
+       "    second_prediction  second_confidence  second_dog     third_prediction  \\\n",
+       "0              collie           0.156665        True    Shetland_sheepdog   \n",
+       "1  miniature_pinscher           0.074192        True  Rhodesian_ridgeback   \n",
+       "2            malinois           0.138584        True           bloodhound   \n",
+       "3             redbone           0.360687        True   miniature_pinscher   \n",
+       "4          Rottweiler           0.243682        True             Doberman   \n",
+       "\n",
+       "   third_confidence  third_dog  \n",
+       "0          0.061428       True  \n",
+       "1          0.072010       True  \n",
+       "2          0.116197       True  \n",
+       "3          0.222752       True  \n",
+       "4          0.154629       True  "
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2190,13 +2667,6 @@
     "# axis=1 denotes that we are referring to a column\n",
     "twitter_archive_clean = twitter_archive_clean.drop(['doggo','floofer','pupper', 'puppo'], axis=1, inplace=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
