--- a/WeRateDogs_Data_Wrangling_Project.ipynb
+++ b/WeRateDogs_Data_Wrangling_Project.ipynb
@@ -70,10 +70,10 @@
    "source": [
     "# use tweepy to query Twitter's API and hide the API info here\n",
     "\n",
-    "consumer_key = 'AgkmAnIUf3JKY2G6pA8uxOe1p'\n",
-    "consumer_secret = '0useHSXYrmMXiNZ8SzMKz5aDWJRfTZ9ZU1czwtSZ2mz7YKgpkr'\n",
-    "access_token = '730600829107896324-9460IUvQC95MZ7H2YwPgUacwMnE6y5f'\n",
-    "access_secret = 'yr8UcFXiMTl4bohMSGPFdHB4nz9q16esBUqXjQt2SVikG'\n",
+    "consumer_key = ''\n",
+    "consumer_secret = ''\n",
+    "access_token = ''\n",
+    "access_secret = ''\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_secret)\n",
